syntax = "proto3";

option csharp_namespace = "ArtistService";

service GrpcArtist {
    rpc GetAllArtists (GetAllRequest) returns (ArtistResponse);
}

message GetAllRequest {}

message GrpcArtistModel{
    int32 artistId = 1;
    string name = 2;
}

message ArtistResponse {
    repeated GrpcArtistModel artist = 1;
}
